feat: add curriculum_board handler, service and repository
